// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-button should be renderable as a children function 1`] = `
<div
  className="
    button
    type-normal
    size-s
    false
    false
    interactive
    false
    
  "
/>
`;

exports[`fyndiq-component-button should be renderable as a custom link element 1`] = `
<Link
  className="
    button
    type-normal
    size-s
    false
    false
    interactive
    false
    
  "
  to="my/path"
>
  Hello
</Link>
`;

exports[`fyndiq-component-button should be renderable as a link 1`] = `
<a
  className="
    button
    type-normal
    size-s
    false
    false
    interactive
    false
    
  "
  href="#hello"
  onClick={[Function]}
>
  Hello
</a>
`;

exports[`fyndiq-component-button should be rendered without props 1`] = `
<button
  className="
    button
    type-normal
    size-s
    false
    false
    interactive
    false
    
  "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a disabled prop 1`] = `
<button
  className="
    button
    type-normal
    size-s
    false
    false
    disabled
    false
    
  "
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a horizontal prop 1`] = `
<button
  className="
    button
    type-normal
    size-s
    horizontal
    false
    interactive
    false
    
  "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a htmlType prop 1`] = `
<button
  className="
    button
    type-normal
    size-s
    false
    false
    interactive
    false
    
  "
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a pressed prop 1`] = `
<button
  className="
    button
    type-normal
    size-s
    false
    pressed
    interactive
    false
    
  "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a size prop 1`] = `
<button
  className="
    button
    type-normal
    size-xs
    false
    false
    interactive
    false
    
  "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;

exports[`fyndiq-component-button should have a type prop 1`] = `
<button
  className="
    button
    type-primary
    size-s
    false
    false
    interactive
    false
    
  "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Hello
</button>
`;
